--- a/micro-tf-api/src/main/resources/application-dev.properties
+++ b/micro-tf-api/src/main/resources/application-dev.properties
@@ -18,4 +18,4 @@ login.login-auth-list=com.microtf.services.LoginByPasswordService,com.microtf.se
 #debug=true
 
 server.servlet.context-path=/api
-server.port=12345
+#server.port=12345
