完成项目基本搭建

--- a/micro-tf-api/src/main/resources/application-dev.properties
+++ b/micro-tf-api/src/main/resources/application-dev.properties
@@ -13,8 +13,9 @@ login.enable-guest=false
 login.expires=86400
 login.iss=microTf
 login.secret=502a0485-c0be-4468-98c3-265d878fa484
+login.enable-login-type=password
 
-login.login-auth-list=com.microtf.services.LoginByPasswordService,com.microtf.services.LoginByWechatService
+#login.login-auth-list=com.microtf.framework.services.LoginByPasswordService,com.microtf.framework.services.LoginByWechatService
 #debug=true
 
 server.servlet.context-path=/api
