--- a/micro-tf-api/src/main/resources/application.properties
+++ b/micro-tf-api/src/main/resources/application.properties
@@ -11,9 +11,10 @@ spring.jpa.show-sql=true
 login.enable-guest=true
 login.expires=86400
 login.iss=microTf
+login.enable-login-type=password,wechat
 
 
-login.login-auth-list=com.microtf.services.LoginByPasswordService,com.microtf.services.LoginByWechatService
+#login.login-auth-list=com.microtf.framework.services.LoginByPasswordService,com.microtf.framework.services.LoginByWechatService
 
 spring.profiles.active=dev
 #server.port=8112
