!1 完成可以正常运行的版本，文章内容可以正常发布。 * 重构包名 * 增加文章保存功能， * 优化部分写法，ResponseUtil增加函数回调。 * 基础可运行版本 * 完成项目基本搭建

--- a/micro-tf-api/src/main/resources/application-dev.properties
+++ b/micro-tf-api/src/main/resources/application-dev.properties
@@ -13,9 +13,7 @@ login.enable-guest=false
 login.expires=86400
 login.iss=microTf
 login.secret=502a0485-c0be-4468-98c3-265d878fa484
-
-login.login-auth-list=com.microtf.services.LoginByPasswordService,com.microtf.services.LoginByWechatService
-#debug=true
+login.enable-login-type=password
 
 server.servlet.context-path=/api
 #server.port=12345
