--- a/micro-tf-api/src/main/resources/application.properties
+++ b/micro-tf-api/src/main/resources/application.properties
@@ -11,9 +11,7 @@ spring.jpa.show-sql=true
 login.enable-guest=true
 login.expires=86400
 login.iss=microTf
-
-
-login.login-auth-list=com.microtf.services.LoginByPasswordService,com.microtf.services.LoginByWechatService
+login.enable-login-type=password,wechat
 
 spring.profiles.active=dev
 #server.port=8112
