--- a/micro-tf-api/src/main/resources/application.properties
+++ b/micro-tf-api/src/main/resources/application.properties
@@ -8,11 +8,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.use_sql_comments=true
 
-login.enable-guest=true
+login.enable-guest=false
 login.expires=86400
 login.iss=microTf
 login.enable-login-type=password,wechat
-
-spring.profiles.active=dev
-#server.port=8112
-#debug=true
+server.servlet.context-path=/api
+#spring.profiles.active=dev
