增加云存储相关功能

--- a/micro-tf-framework/pom.xml
+++ b/micro-tf-framework/pom.xml
@@ -51,6 +51,10 @@
             <groupId>com.microtf</groupId>
             <artifactId>microt-tf-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
