--- a/micro-tf-api/src/main/resources/application.properties
+++ b/micro-tf-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/share-book
-spring.datasource.username=share-book
-spring.datasource.password=eyDLwFFJYnX2YriW
+spring.datasource.url=jdbc:mysql://localhost:3306/microtf
+spring.datasource.username=microtf
+spring.datasource.password=AwAWxHtz78NCBpGG
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
