--- a/micro-tf-api/src/main/resources/application-dev.properties
+++ b/micro-tf-api/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3308/share-book
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/share-book
+spring.datasource.username=share-book
+spring.datasource.password=123456
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
