--- a/micro-tf-framework/pom.xml
+++ b/micro-tf-framework/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>microtf-parent</artifactId>
         <groupId>com.microtf</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>micro-tf-framework</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -51,10 +51,10 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>com.microtf</groupId>
-            <artifactId>microt-tf-common</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.microtf</groupId>-->
+<!--            <artifactId>microt-tf-common</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
